z-index for main-content fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,6 +131,7 @@
 }
 
 #main-page .container {
+  z-index:10;
   height:100%;
 }
 
